--- a/.editorconfig
+++ b/.editorconfig
@@ -2,8 +2,16 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 trim_trailing_whitespace = true
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+
+[{*.json, *.yml}]
+insert_final_newline = false
+
+[*.md]
+indent_size = 3
+insert_final_newline = false
+trim_trailing_whitespace = false
