--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "env_node_ts",
+    "name": "oop_patterns",
     "version": "1.0.0",
     "description": "",
     "main": "build/index.js",
